fixing some resume format issues

--- a/index.html
+++ b/index.html
@@ -572,19 +572,13 @@
 				</td>
 				<td class="c18" colspan="1" rowspan="1">
 					<h1 class="c8" id="h.ca0awj8022e2"><span class="c14">Tools</span></h1>
-					<ul class="c21 lst-kix_d52h1clnbs3c-0 start">
-						<li class="c2 c4"><span class="c0">Git &amp; GitHub</span></li>
-						<li class="c2 c4"><span class="c0">Linux/Unix (Bash CLI)</span></li>
-					</ul>
+					<p class="c2"><span class="c0">Git &amp; GitHub</span></p>
+					<p class="c2"><span class="c0">Linux/Unix (Bash CLI)</span></p>
 					<p class="c2"><span class="c0">ReactJS</span></p>
-					<ul class="c21 lst-kix_d52h1clnbs3c-0">
-						<li class="c2 c4"><span class="c0">Valgrind</span></li>
-					</ul>
+					<p class="c2"><span class="c0">Valgrind</span></p>
 					<p class="c2"><span class="c0">PostgreSQL</span></p>
 					<p class="c2"><span class="c0">Flask</span></p>
-					<ul class="c21 lst-kix_d52h1clnbs3c-0">
-						<li class="c2 c4"><span class="c0">Windows</span></li>
-					</ul>
+					<p class="c2"><span class="c0">Windows</span></p>
 					<p class="c2"><span class="c0">.NET</span></p>
 					<p class="c2 c22"><span class="c0"></span></p>
 					<h1 class="c8" id="h.tuxh7mwdaxox"><span class="c14">Languages</span></h1>
