--- a/index.html
+++ b/index.html
@@ -1,603 +1,76 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<meta content="text/html; charset=UTF-8" http-equiv="content-type">
-	<style type="text/css">
-		@import url('https://themes.googleusercontent.com/fonts/css?kit=RFda8w1V0eDZheqfcyQ4EGb3DKsRMD34dqg1gT8Z-p6isjtAVhoKeKPV_uAAgBOSk3k702ZOKiLJc3WVjuplzPesZW2xOQ-xsNqO47m55DA');
-		.lst-kix_d52h1clnbs3c-5>li:before {
-			content: "\0025a0  "
-		}
 
-		.lst-kix_d52h1clnbs3c-3>li:before {
-			content: "\0025cf  "
-		}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="A warehouse managament site for an automotive fluids sales group.">
+  <meta name="author" content="CPSC-430: Warehouse 2">
 
-		.lst-kix_d52h1clnbs3c-2>li:before {
-			content: "\0025a0  "
-		}
 
-		.lst-kix_d52h1clnbs3c-6>li:before {
-			content: "\0025cf  "
-		}
+  <title>WMS - Warehouse Management System</title>
 
-		.lst-kix_d52h1clnbs3c-1>li:before {
-			content: "\0025cb  "
-		}
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-		.lst-kix_d52h1clnbs3c-7>li:before {
-			content: "\0025cb  "
-		}
+  <!-- Custom styles for this template -->
+  <style>
+    body {
+      padding-top: 54px;
+    }
+    @media (min-width: 992px) {
+      body {
+        padding-top: 56px;
+      }
+    }
+  </style>
 
-		.lst-kix_d52h1clnbs3c-0>li:before {
-			content: "\00200b  "
-		}
-
-		.lst-kix_d52h1clnbs3c-8>li:before {
-			content: "\0025a0  "
-		}
-
-		.lst-kix_3expns8knkd9-0>li:before {
-			content: "\00200b  "
-		}
-
-		.lst-kix_3expns8knkd9-1>li:before {
-			content: "\0025cb  "
-		}
-
-		ul.lst-kix_d52h1clnbs3c-5 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_d52h1clnbs3c-6 {
-			list-style-type: none
-		}
-
-		.lst-kix_3expns8knkd9-3>li:before {
-			content: "\0025cf  "
-		}
-
-		ul.lst-kix_d52h1clnbs3c-7 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_d52h1clnbs3c-8 {
-			list-style-type: none
-		}
-
-		.lst-kix_3expns8knkd9-2>li:before {
-			content: "\0025a0  "
-		}
-
-		.lst-kix_d52h1clnbs3c-4>li:before {
-			content: "\0025cb  "
-		}
-
-		.lst-kix_3expns8knkd9-8>li:before {
-			content: "\0025a0  "
-		}
-
-		.lst-kix_3expns8knkd9-7>li:before {
-			content: "\0025cb  "
-		}
-
-		ul.lst-kix_d52h1clnbs3c-0 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_d52h1clnbs3c-1 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_d52h1clnbs3c-2 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_d52h1clnbs3c-3 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_d52h1clnbs3c-4 {
-			list-style-type: none
-		}
-
-		.lst-kix_3expns8knkd9-4>li:before {
-			content: "\0025cb  "
-		}
-
-		.lst-kix_3expns8knkd9-5>li:before {
-			content: "\0025a0  "
-		}
-
-		.lst-kix_3expns8knkd9-6>li:before {
-			content: "\0025cf  "
-		}
-
-		ul.lst-kix_3expns8knkd9-2 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_3expns8knkd9-1 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_3expns8knkd9-4 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_3expns8knkd9-3 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_3expns8knkd9-0 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_3expns8knkd9-6 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_3expns8knkd9-5 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_3expns8knkd9-8 {
-			list-style-type: none
-		}
-
-		ul.lst-kix_3expns8knkd9-7 {
-			list-style-type: none
-		}
-
-		ol {
-			margin: 0;
-			padding: 0
-		}
-
-		table td,
-		table th {
-			padding: 0
-		}
-
-		.c18 {
-			border-right-style: solid;
-			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
-			border-bottom-color: #ffffff;
-			border-top-width: 0pt;
-			border-right-width: 0pt;
-			border-left-color: #ffffff;
-			vertical-align: top;
-			border-right-color: #ffffff;
-			border-left-width: 0pt;
-			border-top-style: solid;
-			border-left-style: solid;
-			border-bottom-width: 0pt;
-			width: 165pt;
-			border-top-color: #ffffff;
-			border-bottom-style: solid
-		}
-
-		.c10 {
-			border-right-style: solid;
-			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
-			border-bottom-color: #ffffff;
-			border-top-width: 0pt;
-			border-right-width: 0pt;
-			border-left-color: #ffffff;
-			vertical-align: top;
-			border-right-color: #ffffff;
-			border-left-width: 0pt;
-			border-top-style: solid;
-			border-left-style: solid;
-			border-bottom-width: 0pt;
-			width: 358.5pt;
-			border-top-color: #ffffff;
-			border-bottom-style: solid
-		}
-
-		.c0 {
-			color: #666666;
-			font-weight: 400;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Merriweather";
-			font-style: normal
-		}
-
-		.c3 {
-			color: #666666;
-			font-weight: 400;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 8pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c14 {
-			color: #2079c7;
-			font-weight: 700;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c13 {
-			color: #2079c7;
-			font-weight: 700;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 10pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c7 {
-			padding-top: 5pt;
-			padding-bottom: 5pt;
-			line-height: 1.0;
-			page-break-after: avoid;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c11 {
-			font-weight: 400;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 11pt;
-			font-family: "Merriweather";
-			font-style: italic
-		}
-
-		.c19 {
-			font-weight: 700;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c29 {
-			color: #666666;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 6pt;
-			font-family: "Merriweather";
-			font-style: normal
-		}
-
-		.c24 {
-			padding-top: 16pt;
-			padding-bottom: 0pt;
-			line-height: 1.0;
-			page-break-after: avoid;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c20 {
-			font-weight: 700;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 11pt;
-			font-family: "Merriweather";
-			font-style: normal
-		}
-
-		.c17 {
-			font-weight: 700;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 36pt;
-			font-family: "Merriweather";
-			font-style: normal
-		}
-
-		.c12 {
-			font-weight: 400;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c32 {
-			padding-top: 6pt;
-			padding-bottom: 0pt;
-			line-height: 1.0;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c1 {
-			padding-top: 0pt;
-			padding-bottom: 6pt;
-			line-height: 1.0;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c8 {
-			padding-top: 30pt;
-			padding-bottom: 0pt;
-			line-height: 1.0;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c2 {
-			padding-top: 6pt;
-			padding-bottom: 0pt;
-			line-height: 1.3;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c16 {
-			padding-top: 0pt;
-			padding-bottom: 0pt;
-			line-height: 1.15;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c6 {
-			border-spacing: 0;
-			border-collapse: collapse;
-			margin-right: auto
-		}
-
-		.c28 {
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 12pt;
-			font-family: "Merriweather"
-		}
-
-		.c33 {
-			background-color: #ffffff;
-			max-width: 525.6pt;
-			padding: 28.8pt 43.2pt 43.2pt 43.2pt
-		}
-
-		.c4 {
-			margin-left: 0pt;
-			list-style-position: inside;
-			text-indent: 45pt
-		}
-
-		.c25 {
-			color: inherit;
-			text-decoration: inherit
-		}
-
-		.c5 {
-			color: #1155cc;
-			text-decoration: underline
-		}
-
-		.c21 {
-			padding: 0;
-			margin: 0
-		}
-
-		.c26 {
-			height: 57pt
-		}
-
-		.c30 {
-			color: #b7b7b7
-		}
-
-		.c31 {
-			font-size: 11pt
-		}
-
-		.c9 {
-			color: #000000
-		}
-
-		.c15 {
-			height: 588pt
-		}
-
-		.c27 {
-			font-style: italic
-		}
-
-		.c23 {
-			font-weight: 400
-		}
-
-		.c22 {
-			height: 9pt
-		}
-
-		.title {
-			padding-top: 0pt;
-			color: #000000;
-			font-weight: 700;
-			font-size: 36pt;
-			padding-bottom: 6pt;
-			font-family: "Merriweather";
-			line-height: 1.0;
-			text-align: left
-		}
-
-		.subtitle {
-			padding-top: 0pt;
-			color: #000000;
-			font-size: 9pt;
-			padding-bottom: 0pt;
-			font-family: "Open Sans";
-			line-height: 1.15;
-			text-align: left
-		}
-
-		li {
-			color: #666666;
-			font-size: 9pt;
-			font-family: "Merriweather"
-		}
-
-		p {
-			margin: 0;
-			color: #666666;
-			font-size: 9pt;
-			font-family: "Merriweather"
-		}
-
-		h1 {
-			padding-top: 30pt;
-			color: #2079c7;
-			font-weight: 700;
-			font-size: 9pt;
-			padding-bottom: 0pt;
-			font-family: "Open Sans";
-			line-height: 1.0;
-			text-align: left
-		}
-
-		h2 {
-			padding-top: 16pt;
-			color: #000000;
-			font-weight: 700;
-			font-size: 11pt;
-			padding-bottom: 0pt;
-			font-family: "Merriweather";
-			line-height: 1.0;
-			page-break-after: avoid;
-			text-align: left
-		}
-
-		h3 {
-			padding-top: 5pt;
-			color: #666666;
-			font-size: 8pt;
-			padding-bottom: 5pt;
-			font-family: "Open Sans";
-			line-height: 1.0;
-			page-break-after: avoid;
-			text-align: left
-		}
-
-		h4 {
-			padding-top: 8pt;
-			color: #666666;
-			text-decoration: underline;
-			font-size: 11pt;
-			padding-bottom: 0pt;
-			font-family: "Trebuchet MS";
-			line-height: 1.3;
-			page-break-after: avoid;
-			text-align: left
-		}
-
-		h5 {
-			padding-top: 8pt;
-			color: #666666;
-			font-size: 11pt;
-			padding-bottom: 0pt;
-			font-family: "Trebuchet MS";
-			line-height: 1.3;
-			page-break-after: avoid;
-			text-align: left
-		}
-
-		h6 {
-			padding-top: 8pt;
-			color: #666666;
-			font-size: 11pt;
-			padding-bottom: 0pt;
-			font-family: "Trebuchet MS";
-			line-height: 1.3;
-			page-break-after: avoid;
-			font-style: italic;
-			text-align: left
-		}
-	</style>
 </head>
 
-<body class="c33">
-	<p class="c22 c32"><span class="c23 c29"></span></p><a id="t.e3b63aed2c54eeb7e311ff4559a391edb3624438"></a><a id="t.0"></a>
-	<table class="c6">
-		<tbody>
-			<tr class="c26">
-				<td class="c10" colspan="1" rowspan="1">
-					<p class="c1 title" id="h.enbytdl3mi6z"><span class="c9 c17">Taylor Dohmen</span></p>
-				</td>
-				<td class="c18" colspan="1" rowspan="1">
-					<p class="c16"><span class="c9 c12">21 W. Caton Ave.</span></p>
-					<p class="c16"><span class="c12 c9">Alexandria, VA 22301</span></p>
-					<p class="c16"><span class="c12 c9">(703) 608-1200</span></p>
-					<p class="c16"><span class="c9 c19">tdohmen@mail.umw.edu</span></p>
-				</td>
-			</tr>
-			<tr class="c15">
-				<td class="c10" colspan="1" rowspan="1">
-					<h1 class="c8" id="h.y7d3xdxnr44m"><span class="c14">EXPERIENCE</span></h1>
-					<h2 class="c24" id="h.rfgvkg2ifhfd"><span>Hobsons</span><span class="c9">, </span><span class="c23">Arlington, VA &mdash; </span><span class="c27 c23">Software Engineer Intern</span></h2>
-					<h3
-					 class="c7" id="h.n64fgzu3lwuy"><span>May 2017 - August 2017</span></h3>
-						<p class="c2"><span>Contributed UI features within a large-scale web application designed to match high school students with universities using ReactJS, NodeJS, and GraphQL.</span></p>
-						<h2
-						 class="c24" id="h.wj0puh61kxsr"><span>EasyDynamics</span><span class="c9">, </span><span class="c23">Washington DC &mdash; </span><span class="c11 c9">Software Engineer Intern</span></h2>
-							<h3
-							 class="c7" id="h.rf02z0ptk4eo"><span>May 2016 - August 2016</span></h3>
-								<p class="c2"><span class="c0">Designed and implemented identity management solution in C# for a federal government agency to allow employees of separate organizations to securely access and share web based resources and info.</span></p>
-								<h2
-								 class="c24" id="h.1hxcpsc1hco2"><span>University of Mary Washington, </span><span class="c23">Fredericksburg, VA</span><span>&nbsp;</span><span class="c23">&mdash; </span>
-									<span
-									 class="c11 c9">Lab Aide</span>
-										</h2>
-										<h3 class="c7" id="h.ybypdmed418m"><span>August 2014 - June 2015</span></h3>
-										<p class="c2"><span>Assisted computer science students with lab and homework assignments by providing supplementary guidance and explanations around various concepts and practical tools.</span></p>
-										<h1
-										 class="c8" id="h.yk8luflkpwij"><span>EDUCATION</span></h1>
-											<h2 class="c24" id="h.6wymnhinx9q5"><span>University of Mary Washington</span><span class="c23">&nbsp;&mdash; </span><span class="c9 c11">Bachelors of Science in Computer Science</span></h2>
-											<h3
-											 class="c7" id="h.7vtcyzeczjot"><span>August 2013 - May 2014, August 2015 - December 2017</span></h3>
-												<p class="c2"><span class="c0">GPA: 3.9 / 4.0, Member of Phi Betta Kappa</span></p>
-												<p class="c2"><span>Relevant Courses </span><span class="c9 c31">&mdash;</span><span class="c0">&nbsp;Operating Systems, Software Engineering, Programming Languages, Databases, Modeling &amp; Simulation, Algorithms &amp; Data Structures, Discrete Math &amp; Graph Theory, Statistics</span></p>
-												<h1
-												 class="c8" id="h.jhv78pp9wtzd"><span>PROJECTS</span></h1>
-													<h2 class="c24" id="h.vm051rmyhoww"><span>Magenta</span><span>&nbsp;</span><span class="c23">&mdash; </span><span class="c23 c27">Interpreted programming language</span></h2>
-													<p
-													 class="c2"><span class="c0">An imperative/functional language written in C++, using GNU Flex and Bison for lexical analysis and parsing.</span></p>
-				</td>
-				<td class="c18" colspan="1" rowspan="1">
-					<h1 class="c8" id="h.ca0awj8022e2"><span class="c14">Tools</span></h1>
-					<p class="c2"><span class="c0">Git &amp; GitHub</span></p>
-					<p class="c2"><span class="c0">Linux/Unix (Bash CLI)</span></p>
-					<p class="c2"><span class="c0">ReactJS</span></p>
-					<p class="c2"><span class="c0">Valgrind</span></p>
-					<p class="c2"><span class="c0">PostgreSQL</span></p>
-					<p class="c2"><span class="c0">Flask</span></p>
-					<p class="c2"><span class="c0">Windows</span></p>
-					<p class="c2"><span class="c0">.NET</span></p>
-					<p class="c2 c22"><span class="c0"></span></p>
-					<h1 class="c8" id="h.tuxh7mwdaxox"><span class="c14">Languages</span></h1>
-					<p class="c2"><span class="c0">Python</span></p>
-					<p class="c2"><span class="c0">C++</span></p>
-					<p class="c2"><span class="c0">Java</span></p>
-					<p class="c2"><span class="c0">C#</span></p>
-					<p class="c2"><span class="c0">R</span></p>
-					<p class="c2"><span class="c0">JavaScript</span></p>
-					<p class="c2"><span class="c0">SQL</span></p>
-					<h1 class="c8" id="h.sxhga6x725aq"><span class="c14">Links</span></h1>
-					<p class="c2"><span class="c5"><a class="c25" href="https://www.google.com/url?q=https://github.com/taylordohmen&amp;sa=D&amp;ust=1503950170192000&amp;usg=AFQjCNH23TcIL5Ak3r2mbALiYTu7VROo4g">GitHub</a></span></p>
-					<p
-					 class="c2"><span class="c5"><a class="c25" href="https://www.google.com/url?q=https://www.linkedin.com/in/taylor-dohmen-154a7aab/&amp;sa=D&amp;ust=1503950170192000&amp;usg=AFQjCNEWvHnrtZ4FIg3G9jf32Mw7RiX4Bg">LinkedIn</a></span></p>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<p class="c2 c22"><span class="c0"></span></p>
+<body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Warehouse Management System</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="resume.html">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/customers">Customers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/import">Import</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/invoice">Invoice</a>
+            </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Page Content -->
+  <div class="content">
+    {% block content %}{% endblock %}
+  </div>
+
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 
 </html>
