table of contents

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
   <title>WMS - Warehouse Management System</title>
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+    crossorigin="anonymous">
 
   <!-- Custom styles for this template -->
   <style>
     body {
       padding-top: 54px;
     }
+
     @media (min-width: 992px) {
       body {
         padding-top: 56px;
@@ -30,11 +32,11 @@
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Warehouse Management System</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Taylor Dohmen E-portfolio</a>
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -48,29 +50,60 @@
               <a class="nav-link" href="resume.html">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/customers">Customers</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/import">Import</a>
+              <a class="nav-link" href="reflection.html">CPSC 430 Reflection</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/invoice">Invoice</a>
-            </li>
-        </ul>
-      </div>
+        </ul> -->
+    </div>
     </div>
   </nav>
 
   <!-- Page Content -->
   <div class="content">
-    {% block content %}{% endblock %}
+    <ul>
+      <li>
+        <a class="nav-link" href="resume.html">
+          <h3>Resume</h3>
+        </a>
+      </li>
+      <li>
+        <h3>Projects</h3>
+        <ul>
+          <li>
+            <a class="nav-link" href="wms.html">430 Warehouse Management System</a>
+          </li>
+          <li>
+            <a class="nav-link" href="ui.html">430 User Interface Study</a>
+          </li>
+          <li>
+            <a class="nav-link" href="tbd.html">430 Other paper</a>
+          </li>
+          <li>
+            <a class="nav-link" href="magenta.html">Magenta Programming Language</a>
+          </li>
+          <li>
+            <a class="nav-link" href="shell.html">Unix Shell</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a class="nav-link" href="reflection.html">
+          <h3>430 Class Reflection</h3>
+        </a>          
+      </li>
+    </ul>
   </div>
 
 
   <!-- Bootstrap core JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
