2 projects down, 3 to go

--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="A warehouse managament site for an automotive fluids sales group.">
-  <meta name="author" content="CPSC-430: Warehouse 2">
 
-
-  <title>WMS - Warehouse Management System</title>
+  <title>Taylor Dohmen E-Portfolio</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
@@ -62,9 +59,9 @@
 
   <!-- Page Content -->
   <div class="content">
-    <ul>
+    <ul style="list-style-type: none;">
       <li>
-        <a class="nav-link" href="resume.html">
+        <a href="resume.html">
           <h3>Resume</h3>
         </a>
       </li>
@@ -72,24 +69,24 @@
         <h3>Projects</h3>
         <ul>
           <li>
-            <a class="nav-link" href="wms.html">430 Warehouse Management System</a>
+            <a href="wms.html">430 Warehouse Management System</a>
           </li>
           <li>
-            <a class="nav-link" href="ui.html">430 User Interface Study</a>
+            <a href="ui.html">430 User Interface Study</a>
           </li>
           <li>
-            <a class="nav-link" href="tbd.html">430 Other paper</a>
+            <a href="tbd.html">430 Other paper</a>
           </li>
           <li>
-            <a class="nav-link" href="magenta.html">Magenta Programming Language</a>
+            <a href="magenta.html">Magenta Programming Language</a>
           </li>
           <li>
-            <a class="nav-link" href="shell.html">Unix Shell</a>
+            <a href="shell.html">Unix Shell</a>
           </li>
         </ul>
       </li>
       <li>
-        <a class="nav-link" href="reflection.html">
+        <a href="reflection.html">
           <h3>430 Class Reflection</h3>
         </a>          
       </li>
