Project Plan doc

--- a/shell.html
+++ b/shell.html
@@ -21,7 +21,9 @@
 		<h3>Take Aways & Lessons Learned</h3>
 		<p>
 			During the development of this shell, I learned a lot about unix processes and how they are organized within a system. I also gained some useful experience 
-			programming in C and parsing text without the use of any libraries or pre-made tools.
+			programming in C and parsing text without the use of any libraries or pre-made tools. If I were to do this project again, I would want to implement additional features 
+			that popular shells include such as further output redirection and command sequence operators. The notion of pipes in particular is something that would have been nice to include, as pipes
+			facilitate the chaining of shell commands in very useful and intuitive ways.
 		</p>
 	</div>
 	<div>
