--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="ui.html">430 User Interface Study</a>
           </li>
           <li>
-            <a href="tbd.html">430 Other paper</a>
+            <a href="Warehouse2ProjectPlanDocument">430 Warehouse Project Plan Document</a>
           </li>
           <li>
             <a href="magenta.html">Magenta Programming Language</a>
