--- a/shell.html
+++ b/shell.html
@@ -46,7 +46,7 @@
 			</li>
 		</ul>
 		<p>
-			The codebase be found <a href="https://github.com/taylordohmen/shell">here</a>. Installation requires GNU Make and has been tested only on Ubuntu Linux.
+			The codebase can be found <a href="https://github.com/taylordohmen/shell">here</a>. Installation requires GNU Make and has been tested only on Ubuntu Linux.
 			To compile the intepreter, clone the given git repository and run make.
 		</p>
 	</div>
