--- a/ui.html
+++ b/ui.html
@@ -92,6 +92,18 @@ body {margin-top: 0px;margin-left: 0px;}
 </HEAD>
 
 <BODY>
+<div>
+	<h3>Context</h3>
+	<p>
+		This document states my findings after conducting a survey about a specific component of the warehouse management system user interface. I isolated a single workflow of the
+		application, and asked a focus group how they would expect each stage of that workflow to look in the application. Using their ideas, I then designed an interface and 
+		asked them to comment on whether or not it met their expectations or if they had any additional feedback. I then made edits to the interface, taking their comments into
+		account. The biggest thing I learned from this study, was that the age of users hugely affects how they expect an application to look and behave. I found that I made quite
+		a few assumptions during the survey that were also made by the younger members of the focus group but no the older members. This led to some miscommunications, and made
+		me realize that user age is an important fact to consider and that explicitness in communication is necessary with regards to software.
+	</p>
+</div>
+
 <DIV id="page_1">
 
 
