--- a/magenta.html
+++ b/magenta.html
@@ -38,7 +38,7 @@
 		</p>
 		<ul>
 			<li>
-				Dynamic Typing.
+				Static Typing.
 			</li>
 			<li>
 				Built-in types including integers, floating point numbers, strings, and lists.
@@ -51,7 +51,7 @@
 			</li>
 		</ul>
 		<p>
-			The codebase be found <a href="https://github.com/taylordohmen/magenta">here</a>. Installation requires GNU Make and has been tested only on Ubuntu Linux.
+			The codebase can be found <a href="https://github.com/taylordohmen/magenta">here</a>. Installation requires GNU Make and has been tested only on Ubuntu Linux.
 			To compile the intepreter, clone the given git repository and run make.
 		</p>
 	</div>
